# noaa_precip_de

./: .gitignore  README.md  docker-compose.yaml  observations.json  pyproject.toml
dags/: bronze_noaa_station.py
ddl/: bronze_precip_raw_noaa_station_observations.sql  silver_precip_dim_noaa_stations.sql  silver_precip_fact_noaa_station_precipitation.sql  test_hourly.sql
src/: extract.py  load.py  main.py  settings.py
src/bronze_noaa_station/: extract.py  load.py  main.py  settings.py
src/clients/: client.py
src/logging/: custom_logger.py
src/managers/: bigquery_manager.py  noaa_api_manager.py
src/silver_noaa_station/: main.py  settings.py  transform.py
