[project]
name = "precip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "google-cloud-bigquery>=3.37.0",
    "google-cloud-storage>=3.3.1",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "rich>=14.3.3",
]
