[project]
name = "precip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.2.0",
    "flask>=3.1.3,<4.0.0",
    "google-cloud-bigquery>=3.37.0,<4.0.0",
    "google-cloud-storage>=3.3.1,<4.0.0",
    "pandas>=2.3.2,<3.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "rich>=14.3.3,<15.0.0",
]
